update micor change

--- a/index.html
+++ b/index.html
@@ -81,32 +81,32 @@
 
 					<ul class="benefits__list">
 						<li class="benefits__item">
-							<span class="benefits__num" data-speed="-200">/01</span>
+							<span class="benefits__num" data-speed="-200">01</span>
 							<p class="benefits__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, quas.
 							</p>
 						</li>
 						<li class="benefits__item">
-							<span class="benefits__num" data-speed="-150">/02</span>
+							<span class="benefits__num" data-speed="-150">02</span>
 							<p class="benefits__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, quas.
 							</p>
 						</li>
 						<li class="benefits__item">
-							<span class="benefits__num" data-speed="-150">/03</span>
+							<span class="benefits__num" data-speed="-150">03</span>
 							<p class="benefits__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, quas.
 							</p>
 						</li>
 						<li class="benefits__item">
-							<span class="benefits__num" data-speed="-150">/04</span>
+							<span class="benefits__num" data-speed="-150">04</span>
 							<p class="benefits__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, quas.
 							</p>
 						</li>
 						<li class="benefits__item">
-							<span class="benefits__num" data-speed="-110">/05</span>
+							<span class="benefits__num" data-speed="-110">05</span>
 							<p class="benefits__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, quas.
 							</p>
 						</li>
 						<li class="benefits__item">
-							<span class="benefits__num" data-speed="-200">/06</span>
+							<span class="benefits__num" data-speed="-200">06</span>
 							<p class="benefits__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, quas.
 							</p>
 						</li>
@@ -124,25 +124,25 @@
 
 				<div class="work__wrapp">
 					<div class="work__item" data-speed="-300">
-						<span class="work__item-num" data-speed="-1000">/001</span>
+						<span class="work__item-num" data-speed="-1000">001</span>
 						<div class="work__item-img">
 							<img src="img/3.jpg" alt="3">
 						</div>
 					</div>
 					<div class="work__item" data-speed="-600">
-						<span class="work__item-num" data-speed="-500">/002</span>
+						<span class="work__item-num" data-speed="-500">002</span>
 						<div class="work__item-img">
 							<img src="img/4.jpg" alt="4">
 						</div>
 					</div>
 					<div class="work__item" data-speed="-700">
-						<span class="work__item-num" data-speed="-700">/003</span>
+						<span class="work__item-num" data-speed="-700">003</span>
 						<div class="work__item-img">
 							<img src="img/5.jpg" alt="5">
 						</div>
 					</div>
 					<div class="work__item" data-speed="-400">
-						<span class="work__item-num" data-speed="-200">/004</span>
+						<span class="work__item-num" data-speed="-200">004</span>
 						<div class="work__item-img">
 							<img src="img/6.jpg" alt="6">
 						</div>
@@ -163,7 +163,7 @@
 								<img src="img/arrow.svg" alt="">
 							</span>
 							<div class="serv__item-txt">
-								<span class="serv__item-text">/Graphic Design</span>
+								<span class="serv__item-text">Graphic Design</span>
 							</div>
 						</div>
 						<div class="serv__item">
@@ -171,7 +171,7 @@
 								<img src="img/arrow.svg" alt="">
 							</span>
 							<div class="serv__item-txt">
-								<span class="serv__item-text">/UX/UI Design</span>
+								<span class="serv__item-text">UX/UI Design</span>
 							</div>
 						</div>
 						<div class="serv__item">
@@ -179,7 +179,7 @@
 								<img src="img/arrow.svg" alt="">
 							</span>
 							<div class="serv__item-txt">
-								<span class="serv__item-text">/Web Design</span>
+								<span class="serv__item-text">Web Design</span>
 							</div>
 						</div>
 						<div class="serv__item">
@@ -187,7 +187,7 @@
 								<img src="img/arrow.svg" alt="">
 							</span>
 							<div class="serv__item-txt">
-								<span class="serv__item-text">/Brend Design</span>
+								<span class="serv__item-text">Brend Design</span>
 							</div>
 						</div>
 					</div>
